--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <p id="intro">Build a professional resume in minutes by answering simple questions recruiters care about.
         </p>
 
-        <a role="button" id="createButt" href="/resume-builder.html" target="_blank">Create Your Resume</a>
+        <a role="button" id="createButt" href="resume-builder.html" target="_blank">Create Your Resume</a>
 
     </div>
     </section>
@@ -244,3 +244,4 @@
 </body>
 
 </html>
+
