--- a/resume-builder.html
+++ b/resume-builder.html
@@ -48,6 +48,12 @@ button:hover{background-color: rgba(12,12,70,0.85);}
 #contact a{
   text-decoration: none;
 }
+ @media(max-width:320px){
+ #resumeCont{
+  padding: 2.5rem;
+  width: 90%;
+ }
+ }
 </style>
 </head>
 <body>
@@ -260,4 +266,5 @@ if(saved){
 
 </body>
 </html>
+
 
