--- a/resume-builder.html
+++ b/resume-builder.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GHYN3TZ9Q9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GHYN3TZ9Q9');
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="description" content="Fill our simple online resume form and create a professional CV in minutes with Ready Resume. Free, fast, and recruiter-friendly.">
@@ -260,6 +269,7 @@ if(saved){
 
 </body>
 </html>
+
 
 
 
