--- a/resume-builder.html
+++ b/resume-builder.html
@@ -18,7 +18,7 @@
 <style>
 body{
     font-family: Cambria, serif;
-    background-color: rgba(60, 60, 231, 0.821);
+    /* background-color: rgba(60, 60, 231, 0.821); */
     margin:0; padding:0;
 }
 #formContainer {
@@ -269,6 +269,7 @@ if(saved){
 
 </body>
 </html>
+
 
 
 
