Fix formatting and add box shadow to form container

--- a/resume-builder.html
+++ b/resume-builder.html
@@ -23,6 +23,7 @@ body{
 }
 #formContainer {
     max-width: 42rem; margin:6rem auto; padding:2rem; background:white; border-radius:6px;
+ boxshadow: 2px 2px 15px 5px rgba(0,0,0,0.3)
 }
 .section{
     display:none;
@@ -269,6 +270,7 @@ if(saved){
 
 </body>
 </html>
+
 
 
 
