--- a/resume-builder.html
+++ b/resume-builder.html
@@ -22,8 +22,7 @@ body{
     margin:0; padding:0;
 }
 #formContainer {
-    max-width: 42rem; margin:6rem auto; padding:2rem; background:white; border-radius:6px;
- boxshadow: 2px 2px 15px 5px rgba(0,0,0,0.3)
+    max-width: 42rem; margin:6rem auto; padding:2rem; background:white; border-radius:6px; box-shadow: 2px 2px 15px 5px grey;
 }
 .section{
     display:none;
@@ -270,6 +269,7 @@ if(saved){
 
 </body>
 </html>
+
 
 
 
