--- a/resume-builder.html
+++ b/resume-builder.html
@@ -13,7 +13,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="description" content="Fill our simple online resume form and create a professional CV in minutes with Ready Resume. Free, fast, and recruiter-friendly.">
-<title>Build Your Resume | Ready Resume</title>
+<meta name="keywords" content="free cv, professional cv, free resume builder, profeesional resume builder, fast resume">
+ <title>Build Your Resume | Ready Resume</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <style>
 body{
@@ -269,6 +270,7 @@ if(saved){
 
 </body>
 </html>
+
 
 
 
