--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Build a professional resume in minutes with Ready Resume for free. Answer simple questions and get a polished CV recruiters love.">
+    <meta name="keywords" content="free cv, professional cv, free resume builder, profeesional resume builder, fast resume">
     <title>Ready Resume | Build a Professional Resume Online in Minutes</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
@@ -269,6 +270,7 @@
 </body>
 
 </html>
+
 
 
 
